src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.gridcenter{
  display:grid;
  align-items:center;
  justify-items:center;
  justify-content:center;
}



.view{
  min-height:100vh;
}
main{
   /* background: linear-gradient(#2596be,#032879,#0645ce,#010c24); */
}
header{
  background-color: #4a8db1;
  color: white;
  letter-spacing: 2px;
  line-height: 1rem;
}

.content{
  letter-spacing: 2px;
  max-width: 650px;
  margin: 0 auto;
  justify-content: start;

}



/*first section*/

.hero{
  aspect-ratio: 16/9;
  background-image: url("/herobg.svg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  max-width:100%
  
}

.hero h1{
  color: white;
  font-size: 3.5rem;
  font-weight: 300;
  letter-spacing: 2px;
  margin-bottom: 0;
}


.gradientbg{
  background: linear-gradient(#2596be,#032879,#0645ce,#010c24);
}

/*second section*/



.aboutarticle{
  align-items: center;
  /* background-color: #60b1cf; */
  

}
.aboutimg{
  max-width:20%;
  max-height:20%;
}
.aboutbg{
  aspect-ratio: 16/9;
  background-image: url("/aboutbg4.svg");
  background-repeat: no-repeat;
  background-size: 100%;
  
  background-position:center;
  max-width:100%;
  
}

.aboutbg2{
  aspect-ratio: 16/9;
  background-image: url("/aboutbg4.svg");
  background-repeat: no-repeat;
  background-size: 100%;
  background-position:center;
  max-width:100%;
  
}

.orbbg{
  aspect-ratio:16/9;
  background-image: url("/orbbg1.svg");
  background-repeat: no-repeat;
  background-size: 100%;
  background-position:center;
  max-width:100%;
  
}
@media screen and (max-width:1000px){
  .aboutbg{
    max-width:100%;
    aspect-ratio:0;
  }
  
 .aboutbg2{
    max-width:50%;
    aspect-ratio: 0;
 }
 
}


/* .box {
  height: 80vh;
  display: flex;
  align-items: center;
  justify-content: center;
} */

.effect {
   /* width: 500ch;  */
  /* transition: all 12s ease-in-out; */
  
  /* animation: effect 0.8s step-end infinite alternate; */
  /* white-space: nowrap; */
  /* overflow: hidden; */
  border-right: 3px solid;
  border-left: 3px solid;
  font-family: monospace;
  /* font-size: 2em; */
}

@keyframes typing {
  from {
    width: 0;
  }
}
    
@keyframes effect {
  50% {
    border-color: transparent;
  }
}


/*third section*/




.features{
  
  background:url("/aboutbg3.svg");
  color:white;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  max-width:100%
}

.examples{
  width:100vw;
}





/* animation section */
@media(prefers-reduced-motion){
  .fadeelement{ transition:none;
  opacity:1;}
}

.fadeleft{
  opacity:0;
  transition: all 1s;
  filter:blur(5px);
  transform:translateX(-100%);
}
.faderight{
  opacity:0;
  transition: all 1s;
  filter:blur(5px);
  transform:translateX(100%);
}

.show{
  opacity:1;
  filter:blur(0px);
  transform: translateX(0);
}

/* scroll animation section */

.scroll-parent {
  position: relative;
  width: 100vw;
  height: 20rem;
  overflow-x: hidden;
}

.scroll-element {
  width: inherit;
  height: inherit;
  position: absolute;
  left: 0%;
  top: 0%;
  animation: primary 3s linear infinite;
  display: flex;
  align-items: center;
  justify-content: space-around;
}


.primary {
  animation: primary 7s linear infinite;
}

.secondary {
  animation: secondary 7s linear infinite;
}

@keyframes primary {
  from {
    left: 0%;
  }
  to {
    left: -100%;
  }
}

@keyframes secondary {
  from {
    left: 100%;
  }
  to {
    left: 0%;
  }
}

